# ci360-airflow-provider

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: RELEASE-STEPS.md
samples/: ci360_airflow.py  create-connection.sh
scripts/: build-local.sh  create-venv.sh  dump-code.sh  uninstall.sh
src/airflow/providers/sas_ci360/: __init__.py  compat.py  constants.py
src/airflow/providers/sas_ci360/client/: __init__.py  client.py
src/airflow/providers/sas_ci360/config/: __init__.py  ci360_config.py
src/airflow/providers/sas_ci360/hooks/: __init__.py  hooks.py
src/airflow/providers/sas_ci360/models/: __init__.py  segment_map_job.py  task_job.py
src/airflow/providers/sas_ci360/operators/: __init__.py  job_operator.py  segment_map_job_operator.py  task_job_operator.py
src/airflow/providers/sas_ci360/triggers/: __init__.py  job_trigger.py  segment_map_job_trigger.py  task_job_trigger.py
src/airflow/providers/sas_ci360/typing/: __init__.py  jobs.py
